update package json

--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -1,8 +1,8 @@
+
 tasks:
   test:
     steps:
     - checkout
     - commands:
-      - |
-         npm install 
-         npm test
+      - npm ci
+      - npm test
