--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -15,7 +15,7 @@ spec:
         app: nodeapp 
     spec:
       containers:
-      - name: nodeserver
-        image: thetips4you/nodeapp:latest
+      - name: main
+        image: nodeapp:latest
         ports:
         - containerPort: 3000
