--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.17.1"
+    "express": "^4.18"
   },
   "devDependencies": {
-    "mocha": "^9.2.2",
-    "supertest": "6.1.6"
+    "mocha": "^9.2",
+    "supertest": "^6.1"
   },
   "scripts": {
     "start": "node index.js",
